// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Button Alternate colours 1`] = `
Array [
  <div
    className="Spacer__SpacerBox-sc-1acikjz-0 fkunnu"
  >
    <button
      className="sc-AxiKw kAfBrj"
      data-testid={null}
      disabled={false}
      onClick={[Function]}
    >
      Success/green button
    </button>
  </div>,
  <div
    className="Spacer__SpacerBox-sc-1acikjz-0 fkunnu"
  >
    <button
      className="sc-AxiKw jIlTLa"
      data-testid={null}
      disabled={false}
      onClick={[Function]}
    >
      Danger/red button
    </button>
  </div>,
  <div
    className="Spacer__SpacerBox-sc-1acikjz-0 fkunnu"
  >
    <button
      className="sc-AxiKw eeczbE"
      data-testid={null}
      disabled={false}
      onClick={[Function]}
    >
      Transparent button for white backgrounds
    </button>
  </div>,
]
`;

exports[`Storyshots Components/Button Alternate sizes 1`] = `
Array [
  <div
    className="Spacer__SpacerBox-sc-1acikjz-0 fkunnu"
  >
    <button
      className="sc-AxiKw fnkftc"
      data-testid={null}
      disabled={false}
      onClick={[Function]}
    >
      Small button
    </button>
  </div>,
  <div
    className="Spacer__SpacerBox-sc-1acikjz-0 fkunnu"
  >
    <button
      className="sc-AxiKw hoCBFg"
      data-testid={null}
      disabled={false}
      onClick={[Function]}
    >
      Large button
    </button>
  </div>,
  <div
    className="Spacer__SpacerBox-sc-1acikjz-0 fkunnu"
  >
    <button
      className="sc-AxiKw kSeULD"
      data-testid={null}
      disabled={false}
      onClick={[Function]}
    >
      Specified height button
    </button>
  </div>,
  <div
    className="Spacer__SpacerBox-sc-1acikjz-0 fkunnu"
  >
    <button
      className="sc-AxiKw jNLtYA"
      data-testid={null}
      disabled={false}
      onClick={[Function]}
    >
      A multiple-line button with specified width
    </button>
  </div>,
]
`;

exports[`Storyshots Components/Button Default button 1`] = `
<button
  className="sc-AxiKw EOJpW"
  data-testid={null}
  disabled={false}
>
  Default button
</button>
`;

exports[`Storyshots Components/Button Disabled state 1`] = `
Array [
  <div
    className="Spacer__SpacerBox-sc-1acikjz-0 fkunnu"
  >
    <button
      className="sc-AxiKw gFQfQt"
      data-testid={null}
      disabled={true}
    >
      Disabled button
    </button>
  </div>,
  <div
    className="Spacer__SpacerBox-sc-1acikjz-0 fkunnu"
  >
    <button
      className="sc-AxiKw gFQfQt"
      data-testid={null}
      disabled={true}
    >
      Also disabled
    </button>
  </div>,
]
`;

exports[`Storyshots Components/Button Full width 1`] = `
<button
  className="sc-AxiKw gkTuuN"
  data-testid={null}
  disabled={false}
>
  Full width button
</button>
`;

exports[`Storyshots Components/Button Ghost style 1`] = `
Array [
  <div
    className="Spacer__SpacerBox-sc-1acikjz-0 fkunnu"
  >
    <button
      className="sc-AxiKw jrOFLL"
      data-testid={null}
      disabled={false}
      onClick={[Function]}
    >
      Small ghost button
    </button>
  </div>,
  <div
    className="Spacer__SpacerBox-sc-1acikjz-0 fkunnu"
  >
    <button
      className="sc-AxiKw dPMEiB"
      data-testid={null}
      disabled={false}
      onClick={[Function]}
    >
      Regular ghost button
    </button>
  </div>,
  <div
    className="Spacer__SpacerBox-sc-1acikjz-0 fkunnu"
  >
    <button
      className="sc-AxiKw kxWTwT"
      data-testid={null}
      disabled={false}
      onClick={[Function]}
    >
      Large ghost button
    </button>
  </div>,
]
`;

exports[`Storyshots Components/Button Icon only 1`] = `
Array [
  <div
    className="Spacer__SpacerBox-sc-1acikjz-0 fkunnu"
  >
    <button
      className="sc-AxiKw fnkftc"
      data-testid={null}
      disabled={false}
    >
      <span
        className="Icon__IconWrapper-xeqnbo-0 kzKQCj"
      >
        <svg
          className="svg-inline--fa fa-undefined"
        />
      </span>
    </button>
  </div>,
  <div
    className="Spacer__SpacerBox-sc-1acikjz-0 fkunnu"
  >
    <button
      className="sc-AxiKw EOJpW"
      data-testid={null}
      disabled={false}
    >
      <span
        className="Icon__IconWrapper-xeqnbo-0 kzKQCj"
      >
        <svg
          className="svg-inline--fa fa-undefined"
        />
      </span>
    </button>
  </div>,
  <div
    className="Spacer__SpacerBox-sc-1acikjz-0 fkunnu"
  >
    <button
      className="sc-AxiKw gRrYRX"
      data-testid={null}
      disabled={false}
    >
      <span
        className="Icon__IconWrapper-xeqnbo-0 kzKQCj"
      >
        <svg
          className="svg-inline--fa fa-undefined"
        />
      </span>
    </button>
  </div>,
]
`;

exports[`Storyshots Components/Button Loading state 1`] = `
Array [
  <div
    className="Spacer__SpacerBox-sc-1acikjz-0 fkunnu"
  >
    <button
      className="sc-AxiKw dsMGsI"
      data-testid={null}
      disabled={false}
    >
      Loading...
      <span
        className="Icon__IconWrapper-xeqnbo-0 cSOlIO"
      >
        <svg
          className="svg-inline--fa fa-undefined"
        />
      </span>
    </button>
  </div>,
  <div
    className="Spacer__SpacerBox-sc-1acikjz-0 fkunnu"
  >
    <button
      className="sc-AxiKw gqZDgd"
      data-testid={null}
      disabled={false}
    >
      Saving...
      <span
        className="Icon__IconWrapper-xeqnbo-0 cSOlIO"
      >
        <svg
          className="svg-inline--fa fa-undefined"
        />
      </span>
    </button>
  </div>,
  <div
    className="Spacer__SpacerBox-sc-1acikjz-0 fkunnu"
  >
    <button
      className="sc-AxiKw uYRqc"
      data-testid={null}
      disabled={false}
    >
      Deleting...
      <span
        className="Icon__IconWrapper-xeqnbo-0 cSOlIO"
      >
        <svg
          className="svg-inline--fa fa-undefined"
        />
      </span>
    </button>
  </div>,
]
`;

exports[`Storyshots Components/Button With icon 1`] = `
Array [
  <div
    className="Spacer__SpacerBox-sc-1acikjz-0 fkunnu"
  >
    <button
      className="sc-AxiKw fahzXQ"
      data-testid={null}
      disabled={false}
    >
      <span
        className="Icon__IconWrapper-xeqnbo-0 kzKQCj"
      >
        <svg
          className="svg-inline--fa fa-undefined"
        />
      </span>
      Left aligned icon
    </button>
  </div>,
  <div
    className="Spacer__SpacerBox-sc-1acikjz-0 fkunnu"
  >
    <button
      className="sc-AxiKw fDjiPb"
      data-testid={null}
      disabled={false}
    >
      Right aligned icon
      <span
        className="Icon__IconWrapper-xeqnbo-0 kzKQCj"
      >
        <svg
          className="svg-inline--fa fa-undefined"
        />
      </span>
    </button>
  </div>,
]
`;
